--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,1 +1,13 @@
 @import './base.css';
+
+.slide-enter-active,
+.slide-leave-active {
+  transition: all 0.3s ease-out;
+}
+
+.slide-enter-from,
+.slide-leave-to {
+  transform: translateX(30px);
+  opacity: 0;
+}
+
