feat: 데이터 재정의 완료 및 전반적인 리팩토링

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,4 +1,5 @@
 @import './base.css';
+@import './var.css';
 
 .slide-enter-active,
 .slide-leave-active {
@@ -11,3 +12,6 @@
   opacity: 0;
 }
 
+.point {
+  
+}
