--- a/src/scss/_g-form.scss
+++ b/src/scss/_g-form.scss
@@ -22,16 +22,16 @@
       display: flex;
       flex-direction: column;
       row-gap: 30px;
-      padding: 6px 0;
+      padding: 10px 0;
 
       .row {
         display: flex;
         align-items: center;
-        justify-content: space-around;
-        
+        column-gap: 40px;
 
         span, .label {
-          width: 100px;
+          width: fit-content;
+          min-width: 100px;
           font-weight: bold;
           text-align: right;
 
@@ -42,7 +42,7 @@
         }
 
         .val {
-          width: 160px;
+          width: 100%;
           height: 34px;
         }
 
