--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,8 +15,11 @@ button {
     cursor: inherit;
     opacity: 1;
   }
-}
 
+  &:hover {
+    opacity: 0.8;
+  }
+}
 
 input {
   border: none;
@@ -46,3 +49,24 @@ input {
   }
 }
 
+
+.box-shadow {
+  box-shadow: var(--box-shadow);
+}
+
+.react-grid-col {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  
+  @media screen and (max-width: 1024px) {
+    .order-state-view {
+      grid-template-columns: repeat(5, 1fr);
+    }
+  }
+  
+  @media screen and (max-width: 768px) {
+    .order-state-view {
+      grid-template-columns: repeat(1, 1fr);
+    }
+  }
+}
