--- a/src/scss/tab.scss
+++ b/src/scss/tab.scss
@@ -1,3 +1,28 @@
+.c-tab {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+
+  .top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    input {
+      border: 1px solid grey;
+      margin: 4px;
+      padding-inline-start: 4px;
+    }
+
+    button.edit {
+      &.on {
+        background-color: #2aac8e;
+        color: #fff;
+      }
+    }
+  }
+}
+
 .tab {
   display: flex;
   flex-direction: column;
@@ -31,7 +56,6 @@
     button {
       width: 100px;
       height: 44px;
-      background-color: #b8b6b6;
       border: 1px solid darkgrey;
 
       &.on {
@@ -50,9 +74,7 @@
     grid-template-rows: repeat(5, 1fr);
     width: 100%;
     height: 100%;
-    background-color: blue;
 
-    background-color: grey;
     button.item {
       display: flex;
       flex-direction: column;
@@ -61,6 +83,7 @@
       row-gap: 6px;
       padding: 10px;
       border: 1px solid grey;
+      box-shadow: var(--box-shadow);
       
       &.add {
         // width: 50%;
@@ -76,6 +99,22 @@
       span.sub {
         font-size: 14px;
       }
+    }
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .tab {
+    .grid {
+      grid-template-columns: repeat(3, 1fr);
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .tab {
+    .grid {
+      grid-template-columns: repeat(1, 1fr);
     }
   }
 }
