--- a/src/scss/_g-form.scss
+++ b/src/scss/_g-form.scss
@@ -41,12 +41,14 @@
           }
         }
 
+
         .val {
           width: 100%;
           height: 34px;
         }
 
-        input {
+        & > input {
+          height: 45px;
           border: 1px solid #5f5f5f;
           padding: 10px 0;
           color: #000;
