style: 주문내역 편집 기능 수정

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,6 +19,13 @@ button {
   &:hover {
     opacity: 0.8;
   }
+
+  &.toggle {
+      &.on {
+        background-color: #2aac8e;
+        color: #fff;
+      }
+  }
 }
 
 input {
