--- a/src/scss/tab.scss
+++ b/src/scss/tab.scss
@@ -27,6 +27,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  overflow: hidden;
 
   &.edit {
     .ctgs {
@@ -69,17 +70,25 @@
   }
 
   .grid {
+    $item-min-height: 100px;
+
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(5, 1fr);
+    grid-template-columns: repeat(5, minmax(200px, 1fr));
+    grid-template-rows: repeat(auto-fill, minmax($item-min-height, 1fr));
     width: 100%;
     height: 100%;
+    overflow-y: scroll;
+
+    &::-webkit-scrollbar {
+        width: 0;
+    }
 
     button.item {
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      min-height: $item-min-height;
       row-gap: 6px;
       padding: 10px;
       border: 1px solid grey;
