--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -63,6 +63,12 @@ input {
   }
 }
 
+.scroll-y-0 {
+    overflow-y: scroll;
+    &::-webkit-scrollbar {
+        width: 0;
+      }
+}
 
 .box-shadow {
   box-shadow: var(--box-shadow);
