feat: tailwind css 설치 및 적용

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,8 @@
 @import './base.css';
 @import './var.css';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 .slide-enter-active,
 .slide-leave-active {
