style: 전체 스타일 수정

--- a/src/scss/_mixin.scss
+++ b/src/scss/_mixin.scss
@@ -48,3 +48,11 @@
   }
 }
 
+@mixin hover() {
+    &:hover {
+        background-color: var(--color-point);
+        color: #fff;
+        transition: all 0.1s  ease-in-out;
+    }
+}
+
