--- a/src/scss/tab.scss
+++ b/src/scss/tab.scss
@@ -1,3 +1,5 @@
+@import './mixin';
+
 .c-tab {
   display: flex;
   flex-direction: column;
@@ -12,6 +14,7 @@
       border: 1px solid grey;
       margin: 4px;
       padding-inline-start: 4px;
+      padding:4px;
     }
 
     button.edit {
@@ -59,6 +62,11 @@
       height: 44px;
       border: 1px solid darkgrey;
 
+      &:hover {
+        background-color: #2aac8e;
+        color: #fff;
+      }
+
       &.on {
         color: #fff;
         background-color: #2aac8e;
@@ -93,6 +101,8 @@
       padding: 10px;
       border: 1px solid grey;
       box-shadow: var(--box-shadow);
+
+      @include hover(); 
       
       &.add {
         // width: 50%;
