--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -49,16 +49,19 @@ button {
   @include hover;
 }
 
+
 .v-select {
+    $v-height: 36px;
+
     &.height-40 {
-        height: 40px ;
+        height: $v-height;
         .v-input__control {
             .v-field__field {
-                height: 40px;
+                height: $v-height;
     
                 .v-field__input {
                     padding: 0;
-                    padding-bottom: 11px;
+                    padding-bottom: 15px;
 
                     .v-select__selection {
                         padding: 0 8px;
@@ -67,6 +70,33 @@ button {
             }
         }
     }
+}
+
+.form-item {
+    @apply tw-justify-center tw-flex tw-items-center tw-shadow-sm tw-gap-3;
+
+    label {
+        display: inline-block;
+        width: max-content;
+        text-wrap: nowrap;
+    }
+
+    input {
+        height: 100%;
+    }
+
+    .v-switch.v-input {
+        display: flex;
+        align-items: center;
+
+        @apply tw-shadow-sm;
+
+        .v-input__control {
+            display: block;
+            grid-area: auto;
+        }
+    }
+    
 }
 
 input {
