--- a/src/assets/var.css
+++ b/src/assets/var.css
@@ -1,7 +1,8 @@
 :root {
   --color-point: #2aac8e;
   --color-u: #5697d4;
-  --color-d: #fa4a4a;
+  --color-warning: #ec8e37;
+  --color-danger: #fa4a4a;
   --color-bg-gray: #f5f5f9;
   --color-disable: rgba(128, 128, 128, 0.8);
   --box-shadow: 0px 3px 1px -2px var(--v-shadow-key-umbra-opacity, rgba(0, 0, 0, 0.2)), 0px 2px 2px 0px var(--v-shadow-key-penumbra-opacity, rgba(0, 0, 0, 0.14)), 0px 1px 5px 0px var(--v-shadow-key-ambient-opacity, rgba(0, 0, 0, 0.12));
