--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -52,8 +52,8 @@ button {
 
   &.chi {
     padding: 4px;
-
-    @apply tw-shadow-md;
+    box-shadow: var(--box-shadow);
+    
 
     &.primary {
         background-color: var(--color-point);
