feat: view 전환시 이전 화면 잔상 남는 문제 해결

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -173,3 +173,11 @@ input {
 {
   border: 1px solid #AEAEAE;
 }
+
+// animation
+.fade-enter-active, .fade-leave-active {
+    transition: opacity 0.15s;
+}
+.fade-enter, .fade-leave-to /* .fade-leave-active in <2.1.8 */ {
+    opacity: 0;
+}
