feat: 설정에 따른 데이터 변경 작업 임시 저장

--- a/src/scss/_tab.scss
+++ b/src/scss/_tab.scss
@@ -94,7 +94,8 @@
         width: 0;
     }
 
-    button.item {
+    .item {
+        position: relative;
       display: flex;
       flex-direction: column;
       justify-content: center;
