--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,4 @@
-@import './tab.scss';
+@import './tab';
 @import './g-form';
 @import './mixin';
 
@@ -16,13 +16,14 @@ button, a {
   
 }
 
-button {
+button.chi {
   cursor: pointer;
   border: none;
 
   &:disabled {
     cursor: inherit;
     opacity: 1;
+    background-color: grey;
   }
 
   &:hover {
@@ -35,32 +36,30 @@ button {
         color: #fff;
     }
   }
+
   &.hover-bd {
     &:hover{
         border: 1px solid #2aac8e;
         color: #2aac8e;
     }
   }
+
   &.toggle {
       &.on {
         background-color: #2aac8e;
         color: #fff;
       }
   }
-  
+
   @include hover;
 
-  &.chi {
-    padding: 4px;
-    box-shadow: var(--box-shadow);
-    
+  padding: 4px;
+  box-shadow: var(--box-shadow);  
 
-    &.primary {
-        background-color: var(--color-point);
-        color: #fff;
-
-        box-shadow: var(--box-shadow);
-    }
+  &.primary {
+      background-color: var(--color-point);
+      color: #fff;    
+      box-shadow: var(--box-shadow);
   }
 }
 
@@ -69,6 +68,7 @@ button {
 
     &.height-40 {
         height: $v-height;
+
         .v-input__control {
             .v-field__field {
                 height: $v-height;
@@ -123,18 +123,21 @@ input {
   //   margin: 0;
   // }
 }
+
 * {
   // scrollbar-* 적용 순간 webkit이 동작하지 않음
   // scrollbar-width로는 px단위 조절이 불가능
   // scrollbar-color: #5e5e5e #888;
 
   &::-webkit-scrollbar {
-    -webkit-appearance: none;
+    appearance: none;
     width: 6px;
   }
+
   &::-webkit-scrollbar-track-piece {
     background: #8c8c8c;
   }
+
   &::-webkit-scrollbar-thumb {
     background: #676767;
     border-radius: 4px;
@@ -143,6 +146,7 @@ input {
 
 .scroll-y-0 {
     overflow-y: scroll;
+
     &::-webkit-scrollbar {
         width: 0;
       }
@@ -156,13 +160,13 @@ input {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   
-  @media screen and (max-width: 1024px) {
+  @media screen and (width <= 1024px) {
     .order-state-view {
       grid-template-columns: repeat(5, 1fr);
     }
   }
   
-  @media screen and (max-width: 768px) {
+  @media screen and (width <= 768px) {
     .order-state-view {
       grid-template-columns: repeat(1, 1fr);
     }
@@ -179,6 +183,7 @@ input {
 .fade-enter-active, .fade-leave-active {
     transition: opacity 0.15s;
 }
+
 .fade-enter, .fade-leave-to /* .fade-leave-active in <2.1.8 */ {
     opacity: 0;
 }
