--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,6 @@
 @import './base.css';
 @import './var.css';
+@import './animation.css';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
