--- a/src/assets/var.css
+++ b/src/assets/var.css
@@ -1,6 +1,6 @@
 :root {
   --color-point: #2aac8e;
-  --color-second: #5697d4;
+  --color-success: #5697d4;
   --color-warning: #ec8e37;
   --color-danger: #fa4a4a;
   --color-bg-gray: #f5f5f9;
