feat: 식자재관리 1차 저장

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -86,6 +86,12 @@ button.chi {
     }
 }
 
+.v-text-field.compact {
+    input {
+        height: 45px;
+    }
+}
+
 .form-item {
     @apply tw-justify-center tw-flex tw-items-center tw-shadow-sm tw-gap-3;
 
