feat: 식자재 관리 기능 개발 완료

--- a/src/scss/_g-form.scss
+++ b/src/scss/_g-form.scss
@@ -29,7 +29,7 @@
         align-items: center;
         column-gap: 40px;
 
-        span, .label {
+        & > span, .label {
           width: fit-content;
           min-width: 100px;
           font-weight: bold;
