--- a/src/scss/_tab.scss
+++ b/src/scss/_tab.scss
@@ -36,15 +36,18 @@
     .ctgs {
       button {
         margin: 1px;
+
         &.item{
           outline: 1.4px dashed grey;
         }
         
       }
     }
+
     .grid {
       button {
         margin: 1px;
+
         &.item {
           outline: 1.6px dashed darkgrey;
         }
@@ -57,6 +60,7 @@
     display: flex;
     align-items: center;
     font-weight: bold;
+
     // default class
     button {
       min-width: 100px;
@@ -74,6 +78,7 @@
         color: #fff;
         background-color: #2aac8e;
       }
+
       &.add {
         height: 40px;
       }
@@ -119,7 +124,7 @@
         }
       }
 
-      @include hover(); 
+      @include hover; 
       
       &.add {
         // width: 50%;
@@ -132,6 +137,7 @@
         font-weight: bold;
         font-size: 18px;
       }
+
       span.sub {
         font-size: 14px;
       }
@@ -139,7 +145,7 @@
   }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (width <= 1024px) {
   .tab {
     .grid {
       grid-template-columns: repeat(3, 1fr);
@@ -147,7 +153,7 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (width <= 768px) {
   .tab {
     .grid {
       grid-template-columns: repeat(1, 1fr);
