feat: 전체 구조 개편(1)

--- a/src/assets/styles/base/_animations.scss
+++ b/src/assets/styles/base/_animations.scss
@@ -1,10 +1,12 @@
-@keyframes aniBlink {
+@keyframes ani-blink {
     0% {
       opacity: 0.7;
     }
+
     50% {
         opacity: 1;
     }
+
     100% {
       opacity: 0.7;
     }
