--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -1,3 +1,5 @@
+@use "../abstracts/mixin";
+
 v-pagination .v-btn {
     &:disabled {
       color: var(--color-disable);
@@ -47,7 +49,7 @@ v-pagination .v-btn {
         }
     }
   
-    @include hover;
+    @include mixin.hover;
   
     padding: 4px;
     box-shadow: var(--box-shadow);  
