--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -85,7 +85,7 @@ v-pagination .v-btn {
   }
   
   .form-item {
-      @apply tw-justify-center tw-flex tw-items-center tw-shadow-sm tw-gap-3;
+      @apply justify-center flex items-center shadow-sm gap-3;
   
       label {
           display: inline-block;
@@ -101,7 +101,7 @@ v-pagination .v-btn {
           display: flex;
           align-items: center;
   
-          @apply tw-shadow-sm;
+          @apply shadow-sm;
   
           .v-input__control {
               display: block;
