lint style: tailwindcss css변수 선언 및 적용

--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -55,7 +55,7 @@ v-pagination .v-btn {
     box-shadow: var(--box-shadow);  
   
     &.primary {
-        background-color: var(--color-point);
+        background-color: rgb(var(--color-primary));
         color: #fff;    
         box-shadow: var(--box-shadow);
     }
