--- a/src/assets/styles/abstracts/_mixin.scss
+++ b/src/assets/styles/abstracts/_mixin.scss
@@ -47,7 +47,7 @@
 
 @mixin hover() {
     &:hover {
-        background-color: var(--color-point);
+        background-color: rgb(var(--color-primary));
         color: #fff;
         transition: all 0.1s  ease-in-out;
     }
