feat: 패키지 최신화

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -5,4 +5,8 @@
 @use './components/g-form' as *;
 @use './components/tab' as *;
 
-
+/* stylelint-disable */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+/* stylelint-enable */
